--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "builds": [{
-        "src": "vercel_app/wsgi.py",
-        "use": "@NatanFS/vercel-python-wsgi",
-        "config": { "maxLambdaSize": "15mb","python3.8": "python3.8" }
+        "src": "index.py",
+        "use": "@potatohd/py-vercel",
+        "config": { "maxLambdaSize": "15mb" }
     }],
     "routes": [
         {
